# dx-subscription-fee-rs

./: README.md
.github/workflows/: actions.yml  release.yml
farm-boosted-rewards-subscriber/: Cargo.toml
farm-boosted-rewards-subscriber/meta/: Cargo.toml
farm-boosted-rewards-subscriber/src/: buy_mex.rs  claim_farm_boosted.rs  lib.rs
farm-boosted-rewards-subscriber/wasm/: Cargo.toml
subscriber/: Cargo.toml
subscriber/meta/: Cargo.toml
subscriber/meta/src/: main.rs
subscriber/src/: base_functions.rs  base_init.rs  common_storage.rs  daily_operations.rs  lib.rs  service.rs
subscriber/tests/: subscriber_test.rs
subscriber/tests/subscriber_setup/: mod.rs
subscriber/tests/subscription_setup/: mod.rs
subscriber/wasm/: Cargo.toml
subscription-fee/: Cargo.toml
subscription-fee/meta/: Cargo.toml
subscription-fee/src/: fees.rs  lib.rs  pair_actions.rs  service.rs  subtract_payments.rs
subscription-fee/tests/: subscription_test.rs
subscription-fee/tests/pair_setup/: mod.rs
subscription-fee/tests/subscription_setup/: mod.rs
subscription-fee/wasm/: Cargo.toml
